--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
    --basik-sign: #3d546f;
    --basik-nav: #293449;
    --basik-navclick: #1d2739;
+   --basik-filter: #f7f3ec;
 }
 
 body {
@@ -321,8 +322,8 @@ input[type="search"] {
 .tell::before {
     content: "";
     position: absolute;
-    left: 35px;
-    top: 14px;
+    left: 36px;
+    top: 10px;
     width: 18px;
     height: 19px;
     background-image: url('../img/Tell.svg');
@@ -337,7 +338,6 @@ input[type="search"] {
 .tell-adress {
     display: flex;
     flex-direction: column; 
-    
     padding-left: 20px;
 }
 
@@ -779,9 +779,10 @@ input[type="search"] {
     justify-content: space-around;
     align-items: center;
     width: 220px;
-    height: 318px;
+    height: 295px;
     text-align: center;
     padding-bottom: 21px;
+    
 }
 
 .buuton-bay {
@@ -960,7 +961,7 @@ input[type="search"] {
     width: 940px;
     height: 89px;
     margin: 0 auto;
-    margin-top: -60px;;
+    margin-top: -38px
 }
 
 .manufactures-block h2 {
@@ -1429,7 +1430,7 @@ input[type="search"] {
 }
 
 .page-footer {
-    margin-top: 80px;
+    margin-top: 78px;
 }
 
 .footer-navigation-bar {
@@ -1530,7 +1531,7 @@ input[type="search"] {
 
 .footer-contacts-bar {
     background-color: var(--dark-blue);
-    height: 197px;
+    height: 105px;
 }
 
 .footer-contacts {
@@ -1609,7 +1610,7 @@ input[type="search"] {
 
 .catalog-navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 357px;
     font-family: PT Sans;
     font-style: normal;
@@ -1618,15 +1619,60 @@ input[type="search"] {
     line-height: 18px;
     align-items: center;
     text-transform: uppercase; 
+    margin-top: -58px;
+    margin-left: 20px;
 }
 
 .catalog-navigation a {
     color: var(--basik-black);
 }
 
+.catalog-navigation li {
+    position: relative;
+    padding-left: 15px;
+}
+
+.catalog-navigation li:nth-child(1)::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -14px;
+    width: 8px;
+    height: 12px;
+    background-image: url('../img/icon-right-small.svg');
+}
+
+.catalog-navigation li:nth-child(2)::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -9px;
+    width: 8px;
+    height: 12px;
+    background-image: url('../img/icon-right-small.svg');
+}
+
+.catalog-navigation li:nth-child(3)::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -7px;
+    width: 8px;
+    height: 12px;
+    background-image: url('../img/icon-right-small.svg');
+}
+
+.catalog-navigation-home {
+    position: absolute;
+    background-image: url('../img/icon-home.svg');
+    width: 14px;
+    height: 12px;
+    top: 344px;
+}
+
 .catalog-heading {
     background-color: var(--background-catalog);
- 
+    margin-top: -4px;
 }
 
 .catalog-heading h2 {
@@ -1640,37 +1686,209 @@ input[type="search"] {
 .catalog-block-product {
     display: grid;
     grid-template-columns: 220px 1fr;
-    grid-template-rows: auto auto;
+    grid-template-rows: 38px 1050px 1fr;
     gap: 20px;
-   
+    margin-top: -6px;
 }
 
-.product-block-nav {
-    grid-column: 2/2;
+.catalog-filter {
+    display: grid;
+    grid-template-columns: 220px 700px;
+    grid-template-rows: 38px;
+    gap: 20px;
+}
+
+.catalog-filter-form {
+    font-family: PT sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    font-weight: 18px;
+    text-transform: uppercase;
+    color: var(--basik-black);
+    background-color: var(--basik-filter);
+    padding: 12px 151px 10px 18px
+}
+
+.catalog-filter-sorting {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--basik-filter);
+    overflow: hidden;
+}
+
+.catalog-sorting {
+    display: flex;
+    flex-basis: 459px;
+}
+
+.catalog-sorting li:nth-child(1) {
+    font-family: PT sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    font-weight: 18px;
+    color: var(--basik-red);
+    text-transform: uppercase;
+    margin-top: -3px;
+}
+
+.catalog-sorting li:nth-child(1) a {
+    color: var(--basik-red);
+}
+
+.catalog-sorting li:nth-child(2) {
+    font-family: PT sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    font-weight: 1px;
+    text-transform: uppercase;
+    padding-left: 71px;
+    margin-top: -3px;
+}
+
+.catalog-sorting li:nth-child(2) a {
+    color:rgba(0, 0, 0, 0.3);
+    border-bottom: 1px dotted var(--basik-red);
+}
+
+.catalog-sorting li:nth-child(3) {
+    font-family: PT sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    font-weight: 1px;
+    text-transform: uppercase;
+    padding-left: 65px;
+    margin-top: -4px;
+}
+
+.catalog-sorting li:nth-child(3) a {
+    color:rgba(0, 0, 0, 0.3);
+    border-bottom: 1px dotted var(--basik-red);
+}
+
+.catalog-sorting-up {
+    position: absolute;
+    top: -11px;
+    left: 641px;
+    display: inline-block;
+    vertical-align: baseline;
+    color: var(--basik-red);
+	border: 10px solid;
+	border-right-width: 5.5px;
+	border-left-width: 5.5px;
+	border-right-color: transparent;
+    border-left-color: transparent;
+    background-repeat: no-repeat;
+    height: 15px;
+}
+
+.catalog-sorting-down {
+    position: absolute;
+    top: 14px;
+    left: 673px;
+    display: inline-block;
+    vertical-align: baseline;
+    color: var(--basik-greylight);
+	border: 10px solid;
+	border-right-width: 5.5px;
+	border-left-width: 5.5px;
+	border-right-color: transparent;
+    border-left-color: transparent;
+    background-repeat: no-repeat;
+    height: 15px;
+}
+
+.catalog-sorting li a:hover {
+    color: var(--basik-black);
+}
+
+.catalog-sorting li a:focus {
+    color: var(--basik-red);
+}
+
+.catalog-filter-sorting span {
+    font-family: PT sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    font-weight: 18px;
+    text-transform: uppercase;
+    color: var(--basik-black);
+    padding-top: 13px;
+    padding-left: 20px;;
+}
+
+.catalog-filter-sorting ul {
+    display: flex;
+    flex-direction: row;
 }
 
 .products-list-catalog {
     display: grid;
     grid-template-columns: 220px 220px 220px;
     gap: 20px;
+    margin-top: 65px;
 }
 
 .products-list-navigation {   
+    grid-column: 2/2;
+    grid-row: 3/3;
     display: flex;
     font-family: PT Sans;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
     line-height: 18px;
-    padding-bottom: 59px;
-    
+    margin-top: -14px;
 }
 
 .products-list-navigation a {
     color: var(--basik-black);
     border: 1px solid #e5e5e5;
     padding: 10px 15px 10px 15px;
-    margin: 10px;
+    border-radius: 2px;
+}
+
+.products-list-navigation :nth-child(1) a {
+    background-color: var(--basik-red);
+    color: var(--basik-white)
+}
+
+.products-list-navigation :nth-child(2) a {
+    margin-left: 9px;
+}
+
+.products-list-navigation :nth-child(3) a {
+    margin-left: 9px;
+}
+
+.products-list-navigation :nth-child(4) a {
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 18px;
+    text-transform: uppercase;
+    margin-left: 9px;
+    padding: 10px 31px 10px 32px;
+}
+
+.products-list-navigation a:hover {
+    border: 1px solid var(--basik-greylight)
+}
+
+.products-list-navigation a:active {
+    border: 1px solid var(--basik-red-click)
+}
+
+.products-list-navigation a:focus {
+    background-color: var(--basik-red);
+    color: var(--basik-white)
 }
 
 .perforators {
@@ -1680,7 +1898,7 @@ input[type="search"] {
     background-color: var(--basik-background);
     height: 261px;
     width: unset;
-    
+    margin-top: 54px
 }
 
 .perforators h2 {
@@ -1709,27 +1927,125 @@ input[type="search"] {
 }
 
 .order-navigation-bookmarks {
+    position: relative;
     padding-right: 38px;
+}
+
+.order-navigation-bookmarks::before {
+    content: "";
+    position: absolute;
+    left: -24px;
+    top: 3px;
+    width: 14px;
+    height: 15px;
+    background-image: url('../img/icon-bookmark.svg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    opacity: 0.3;
+}
+
+.order-navigation-bookmarks:hover::before {
+    opacity: 1;
+}
+
+.order-navigation-bookmarks:active {
+    background-color: var(--dark-blue-click);
+    opacity: 0.5;
 }
 
 .button-order-private {
     display: flex;
     flex-direction: column;
     align-content: space-between;
+    margin-left: -22px;
+}
+
+.private-nav {
+    position: relative;
+    text-align: center;
+}
+
+.private-nav a:hover {
+    color: var(--basik-red-nav);
+}
+
+.private-nav a:active {
+    opacity: 0.3;
+}
+
+.private-nav::before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 133px;
+    width: 8px;
+    height: 8px;
+    background-image: url("../img/tchk.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
 }
 
 .private-nav-button {
-    color: var(--dark-grey)
+    position: relative;
+    color: var(--dark-grey);
+    padding-left: 15px;
+    padding-right: 15px;
+    top: 7px;
+}
+
+.private-nav-dec {
+    background-image: url('../img/tchk.svg'); 
+    width: 7px;
+    height: 7px;  
 }
 
 .button-private {
+    position: relative;
+    font-size: 21px;
+    line-height: 21px;
     background: var(--basik-white);
     padding: 12px 57px 12px 56px;
     color: var(--basik-black);
 }
 
-.private-nav {
-    text-align: center;
+.button-private:active {
+    opacity: 0.3;
+}
+
+.button-private::before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 18px;
+    top: 13px;
+    left: 15px;
+    background-image: url('../img/Avatar.svg');
+}
+
+.button-private:hover::before {
+    background-image: url('../img/Avatar2.svg');
+}
+
+.button-link {
+    position: relative;
+}
+
+.button-private-exit::before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 17px;
+    top: 13px;
+    left: 262px;
+    background-image: url('../img/exit.svg');
+}
+
+.button-private-exit:hover::before {
+    background-image: url('../img/exit2.svg');
+}
+
+.button-private-exit:active::before {
+    opacity: 0.3;
 }
 
 .order-navigation-catalog {
@@ -1749,4 +2065,8 @@ input[type="search"] {
     width: 940px;
     margin: 0 auto;
     height: 42px;
+}
+
+.page-footer-catalog {
+    margin-top: 2px
 }
