--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@
    --basik-range: #444444;
    --basik-radio: #adb5bd;
    --basik-filtr: #e5e5e5;
+   --basik-navbacground: #f1f1f1;
+   --basik-shadow:  rgba(0, 0, 0, 0.24);
 }
 
 body {
@@ -97,6 +99,11 @@ a {
 img {
     max-width: 100%;
     height: auto;
+}
+
+.page-main {
+    padding: 0;
+    margin: 0;
 }
 
 .no-indentation {
@@ -151,7 +158,7 @@ img {
 
 .header-logo {
     background-color: var(--basik-red);
-    box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+    box-shadow: inset 0px -5px 0px var(--basik-shadow);
     padding-left: 56px;
     padding-right: 56px;
     padding-top: 13px;
@@ -360,13 +367,12 @@ input[type='search'] {
 
 .button-sign:active::before {
     filter: brightness(0);
-    opacity: 0.3;
+    opacity: 0.2;
 }
 
 .button-reg:active,
 .button-sign:active {
     color: var(--basik-greylight);
-    
 }
 
 .button-reg {
@@ -380,7 +386,7 @@ input[type='search'] {
     justify-content: space-between;
     align-self: stretch;
     width: 940px;
-    min-height: 158px;
+    min-height: 94px;
     margin: 0 auto;
     padding-top: 46px;
 }
@@ -451,7 +457,7 @@ input[type='search'] {
 
 .main-navigation {
     background-color: var(--dark-grey);
-    box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+    box-shadow: inset 0px -5px 0px var(--basik-shadow);
     width: 940px;
     margin: 0 auto;
 }
@@ -463,7 +469,6 @@ input[type='search'] {
     font-size: 18px;
     line-height: 24px;
     color: var(--basik-white); 
-    margin-top: -46px;
     padding-right: 28px;
     padding-left: 28px;
 }
@@ -481,10 +486,6 @@ input[type='search'] {
     opacity: 0.5;
 }
 
-.page-main {
-    margin-left: -40px;
-}
-
 .categories-list {
     display: grid;
     grid-template-columns: 300px 300px 300px;
@@ -493,6 +494,7 @@ input[type='search'] {
     width: 940px;
     margin: 0 auto;
     margin-top: -8px;
+    padding-inline-start: 0px;
 }
 
 .categories-slider {
@@ -848,7 +850,6 @@ input[type='search'] {
     grid-template-rows: 89px ;
     gap: 20px;
     margin-top: -50px;
-    margin-left: 40px;
 }
 
 .products-block {
@@ -886,29 +887,25 @@ input[type='search'] {
     margin-right: 14px;
 }
 
-.products .products-list {
-    padding: 0;
-}
-
 .products-list {
     display: flex;
     gap: 20px;
     width: 940px;
     margin: 0 auto;
+    padding-inline-start: 0;
 }
 
 .products-item {
     display: flex;
     position: relative;
     flex-direction: column;
-    justify-content: space-around;
+ 
     align-items: center;
     width: 220px;
     min-height: 295px;
     text-align: center;
     padding-bottom: 21px;
     overflow: hidden;
-    
 }
 
 .buuton-bay {
@@ -1012,6 +1009,7 @@ input[type='search'] {
     font-size: 18px;
     line-height: 20px;
     color: var(--basik-black);
+    margin-bottom: auto;
 }
 
 .products-item del {
@@ -1085,7 +1083,7 @@ input[type='search'] {
     display: grid;
     grid-template-rows: 89px;
     gap: 20px;
-    margin-left: 40px;
+    
 }
 
 .manufactures-block {
@@ -1127,7 +1125,7 @@ input[type='search'] {
     gap: 20px;
     width: 940px;
     margin: 0 auto;
-    padding-right: 40px;
+    padding-inline-start: 0;
 }
 
 .manufactures-list-logo:hover {
@@ -1152,7 +1150,7 @@ input[type='search'] {
     width: 940px;
     margin: 0 auto;
     padding-top: 64px;
-    padding-left: 40px;
+    
 }
 
 .service-slide h3 {
@@ -1174,26 +1172,24 @@ input[type='search'] {
     margin: 0 auto;
     padding-top: 25px;
     letter-spacing: 0.45px;
-    padding-left: 42px;
+    
 }
 
 .service-slide-delivery,
 .service-slide-warranty,
 .service-slide-credit {
     position: relative;
-    width: 940px;
-    margin: 0 auto;
 }
 
 .service-slide {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2.5fr;
     gap: 80px;
-    width: 940px;
     margin: 0 auto;
+    width: 940px;
     padding-top: 60px;
     margin-top: -2px;
-   
+    padding-right: 40px;
 }
 
 .service-list .active {
@@ -1207,7 +1203,7 @@ input[type='search'] {
 }
 
 .service-list a {
-    display: block;
+  display: block;
 	padding-top: 13px;
 	padding-left: 22px;
 	padding-bottom: 17px;
@@ -1219,11 +1215,12 @@ input[type='search'] {
 	text-decoration: none;
 	background: var(--dark-grey);
 	box-shadow: inset 0 -1px 0 var(--dark-blue);
-	border-top: 1px solid var(--basik-bord);
+  border-top: 1px solid var(--basik-bord);
+  
 }
 
 .service-list {
-    margin-left: -21px;
+    padding-left: 20px;
 }
 
 .service-list-delivery {
@@ -1360,7 +1357,6 @@ input[type='search'] {
     width: 940px;
     margin: 0 auto;
     margin-top: 47px;
-    padding-left: 42px;
 }
 
 .details h2 {
@@ -1598,6 +1594,11 @@ input[type='search'] {
     background-color: var(--basik-red-click);
 }
 
+.footer-nav li:not(:first-child) {
+  margin-left: 58px;
+  margin-top: 1.8em;
+}
+
 .footer-nav {
     font-family: 'Cuprum', 'Arial', sans-serif;
     font-style: normal;
@@ -1605,10 +1606,10 @@ input[type='search'] {
     font-size: 18px;
     line-height: 0px;
     display: flex;
-    justify-content: space-between; 
+    justify-content: flex-end; 
     flex-basis: 547px;
     align-items: flex-end;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
 }
 
 .footer-navigation h2 {
@@ -1617,8 +1618,12 @@ input[type='search'] {
 
 .footer-cat { 
     display: flex; 
-    justify-content: space-between;
     align-items: flex-end;
+}
+
+.footer-cat li {
+    margin-left: 58px;
+    margin-top: 0.5em;
 }
 
 .footer-cat-nav {
@@ -1628,9 +1633,8 @@ input[type='search'] {
     font-size: 18px;
     line-height: 24px;
     display: flex;
-    justify-content: space-between;
-    flex-basis: 524px;
-    margin-top: 30px;
+    justify-content: flex-end;
+    flex-wrap: wrap;
 }
 
 .footer-cat-nav a,
@@ -1650,8 +1654,9 @@ input[type='search'] {
     opacity: 0.5;
 }
 
-.footer-cat-addres {
-    width: 340px;
+.footer-cat-addres address {
+  padding-top: 20px;
+  width: 321px;
 }
 
 .footer-cat address {
@@ -1661,9 +1666,6 @@ input[type='search'] {
     font-size: 18px;
     line-height: 24px;
     color: var(--low-white);
-    padding-bottom: 8px;
-    
-    
 }
 
 .footer-cat-addres a {
@@ -1677,12 +1679,12 @@ input[type='search'] {
 
 .footer-contacts-bar {
     background-color: var(--dark-blue);
-    height: 105px;
+    min-height: 105px;
 }
 
 .footer-contacts {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto max-content auto;
     color: var(--basik-white);
     width: 940px;
     margin: 0 auto;
@@ -1696,10 +1698,11 @@ input[type='search'] {
 
 .footer-social {
     display: grid;
-    grid-template-columns: 44px 44px 44px;
+    grid-template-columns: repeat(auto-fit, 44px);
     gap: 1px;
     margin-left: 50px;
-    margin-top: -px;
+    min-width: 134px;
+    max-width: 250px;
 }
 
 .footer-copyright {
@@ -2041,7 +2044,7 @@ input[type='search'] {
     background-repeat: no-repeat;
     background-position: center center;
     margin-right: 12px;
-    
+    flex-shrink: 0;
 }
 
 .checkbox-custom input:checked+label::before {
@@ -2161,7 +2164,6 @@ input[type='search'] {
     font-size: 13px;
     line-height: 18px;
     text-transform: uppercase;
-    border: 1px solid var;
     padding: 10px 79px 9px 79px;
     cursor: pointer;
 }
@@ -2341,14 +2343,13 @@ input[type='search'] {
 }
 
 .perforators {
-    
     flex-direction: column;
     justify-content: center;
     background-color: var(--basik-background);
-    min-height: 261px;
+    min-height: 131px;
     width: unset;
     margin-top: 54px;
-    padding: 62px;
+    padding: 66px 0;
 }
 
 .perforators h2 {
@@ -2485,7 +2486,7 @@ input[type='search'] {
     height: 18px;
     top: 15px;
     left: 15px;
-    background-image: url('../img/avatar2.svg');
+    background-image: url('../img/avatar.svg');
     filter: brightness(0);
     opacity: 0.3;
     padding-left: 20px;
@@ -2551,10 +2552,6 @@ input[type='search'] {
 
 .main-order-catalog .main-order-search {
     margin-left: -42px;
-}
-
-.page-footer-catalog {
-    margin-top: -122px
 }
 
     /* Модальные окна */
@@ -2669,13 +2666,15 @@ input[type='search'] {
 .modalbay-nav {
     position: relative;
     justify-content: space-around;
-    background-color: var(-);
+    background-color: var(--basik-background);
+    height: 111px;
+    margin-top: 65px
 }
 
 .modalbay-nav button:nth-child(1) {
     position: absolute;
-    top: 79px;
-    left: 113px;
+    top: 37px;
+    left: 115px;
     font-family: 'Cuprum', 'Arial', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -2690,7 +2689,7 @@ input[type='search'] {
 
 .modalbay-nav button:nth-child(2) {
     position: absolute;
-    top: 79px;
+    top: 37px;
     left: 315px;
     font-family: 'Cuprum', 'Arial', sans-serif;
     font-style: normal;
